--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,9 @@
+@import url("https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -18,4 +19,4 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
